--- a/meshrenderer.html
+++ b/meshrenderer.html
@@ -44,7 +44,9 @@
         // per-vertex attributes of our mesh
         in vec4 a_position;
         in vec3 a_normal;
-        in vec2 a_texcoord; // Add this line for texture coordinates
+        in vec2 a_texcoord; 
+        in vec3 a_tangent;
+        in vec3 a_bitangent;
         /*
         in vec3 a_normal;
         in vec3 a_tangent;
@@ -66,22 +68,29 @@
         uniform float x_position;
         uniform float y_position;
         uniform float z_position;
+        out mat3 tangentToWorldMatrix;
          void main() {          
             gl_Position = modelViewProjection * a_position;
 
-    vec3 normal = normalize(mat3(transposeInverseModelView) * a_normal);
-    v_normal = normal;
-    vec4 lightPosition = vec4(x_position,y_position, z_position, 1.0); // Adjust light position as needed
-    vec3 lightDir = normalize(lightPosition.xyz - a_position.xyz);
-    v_lightDir = lightDir;
-    v_texcoord = a_texcoord; // Pass texture coordinates to fragment shader
+            vec3 normal = normalize(mat3(transposeInverseModelView) * a_normal);
+            v_normal = normal;
+
+            // Calculate tangent-to-world matrix
+            tangentToWorldMatrix = mat3(a_tangent, a_bitangent, normalize(a_normal));
+
+            vec4 lightPosition = vec4(x_position,y_position, z_position, 1.0); 
+            vec3 lightDir = normalize(lightPosition.xyz - a_position.xyz);
+            v_lightDir = lightDir;
+            v_texcoord = a_texcoord;
         }
-        </script>
+    </script>
 
     <!-- our fragment shader; reponsible for determining the output (color, depth, etc.) for each sample of a rasterized primitive (fragment), see https://www.khronos.org/opengl/wiki/Fragment_Shader -->
     <script id="fs" type="x-shader/x-fragment">
         #version 300 es
         precision highp float;
+
+        in mat3 tangentToWorldMatrix;
 
         // these are the interpolated attributes we receive from the vertex shader
         in vec4 v_position;
@@ -127,23 +136,26 @@
         uniform sampler2D ambientMap;
         uniform sampler2D diffuseMap;
         uniform sampler2D specularMap;
+        uniform sampler2D bumpMap;
         // the actual color output of the fragment shader
         out vec4 outColor;
         void main() {
-    vec3 normal = normalize(v_normal);
-    vec3 lightDir = normalize(v_lightDir);
+            vec3 tangentSpaceNormal = texture(bumpMap, v_texcoord).xyz * 2.0 - 1.0;
+            vec3 worldSpaceNormal = normalize(tangentToWorldMatrix * tangentSpaceNormal);
+            vec3 normal = normalize(worldSpaceNormal);
+            vec3 lightDir = normalize(v_lightDir);
 
-    float diff = max(dot(normal, lightDir), 0.0);
-    vec3 diffuseColor = texture(diffuseMap, v_texcoord).rgb * diff;
+            float diff = max(dot(normal, lightDir), 0.0);
+            vec3 diffuseColor = texture(diffuseMap, v_texcoord).rgb * diff;
 
-    vec3 viewDir = normalize(-v_lightDir);
-    vec3 reflectDir = reflect(-lightDir, normal);
-    float spec = pow(max(dot(viewDir, reflectDir), 0.0), shininess);
-    //vec3 specularColor = specular * spec;
-    vec3 specularColor = texture(specularMap, v_texcoord).rgb * spec;
+            vec3 viewDir = normalize(-v_lightDir);
+            vec3 reflectDir = reflect(-lightDir, normal);
+            float spec = pow(max(dot(viewDir, reflectDir), 0.0), shininess);
+            //vec3 specularColor = specular * spec;
+            vec3 specularColor = texture(specularMap, v_texcoord).rgb * spec;
 
-    vec3 finalColor = ambient * texture(ambientMap, v_texcoord).rgb + diffuseColor + specularColor ;
-    outColor = vec4(finalColor, 1.0);
+            vec3 finalColor = ambient * texture(ambientMap, v_texcoord).rgb + diffuseColor + specularColor ;
+            outColor = vec4(finalColor, 1.0);
         }
     </script>
 
