--- a/meshrenderer.html
+++ b/meshrenderer.html
@@ -96,7 +96,7 @@
         in vec4 v_position;
         in vec3 v_normal;
         in vec3 v_lightDir;
-        in vec2 v_texcoord; // Ensure this line is present for texture coordinates
+        in vec2 v_texcoord; 
         /*
         in vec3 v_normal;
         in vec3 v_tangent;
@@ -137,19 +137,36 @@
         uniform sampler2D diffuseMap;
         uniform sampler2D specularMap;
         uniform sampler2D bumpMap;
+
+        
+        uniform float bumpIntensity;
+        uniform float bumpFrequency;
+        uniform float bumpAmplitude;
+
         // the actual color output of the fragment shader
         out vec4 outColor;
+
+        // Bump function
+        vec3 applyBump(vec3 normal, vec2 texcoord) {
+            float frequency = bumpFrequency;
+            float amplitude = bumpAmplitude* bumpIntensity; 
+            float offset = sin(texcoord.x * frequency) * cos(texcoord.y * frequency) * amplitude;
+            return normalize(normal + offset);
+        }
         void main() {
             vec3 tangentSpaceNormal = texture(bumpMap, v_texcoord).xyz * 2.0 - 1.0;
             vec3 worldSpaceNormal = normalize(tangentToWorldMatrix * tangentSpaceNormal);
             vec3 normal = normalize(worldSpaceNormal);
+            vec3 bumpedNormal = applyBump(normal, v_texcoord); 
+
             vec3 lightDir = normalize(v_lightDir);
 
-            float diff = max(dot(normal, lightDir), 0.0);
+            //float diff = max(dot(normal, lightDir), 0.0);
+            float diff = max(dot(bumpedNormal, lightDir), 0.0);
             vec3 diffuseColor = texture(diffuseMap, v_texcoord).rgb * diff;
 
             vec3 viewDir = normalize(-v_lightDir);
-            vec3 reflectDir = reflect(-lightDir, normal);
+            vec3 reflectDir = reflect(-lightDir, bumpedNormal);
             float spec = pow(max(dot(viewDir, reflectDir), 0.0), shininess);
             //vec3 specularColor = specular * spec;
             vec3 specularColor = texture(specularMap, v_texcoord).rgb * spec;
@@ -193,6 +210,9 @@
             x_position: 1.0,
             y_position: 1.0,
             z_position: 1.0,
+            bumpIntensity: 1.0,
+            bumpFrequency: 20.0,
+            bumpAmplitude: 2.0,
             ambientMap: "",
             diffuseMap: "",
             specularMap: "",
