--- a/raytracer.html
+++ b/raytracer.html
@@ -7,7 +7,7 @@
     <title>CG - Raytracer</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-   
+
 
 <body>
     <!-- glMatrix: A vector/matrix library for WebGL, https://glmatrix.net/ -->
@@ -55,7 +55,7 @@
         precision highp float;
 
         uniform mat4 modelViewProjection;
-        uniform mat4 inverseModelViewProjection;        
+        uniform mat4 inverseModelViewProjection;
 
         in vec4 v_position;
         out vec4 outColor;
@@ -71,14 +71,13 @@
             vec3 normal;
         };
 
-        Intersection intersectSphere(Ray ray, vec3 center, float radius)
-        {
+        Intersection intersectSphere(Ray ray, vec3 center, float radius) {
             Intersection result = Intersection(-1.0, vec3(0.0), vec3(0.0));
 
             vec3 oc = ray.origin - center;
             float b = dot(oc, ray.direction);
-            float c = dot(oc, oc) - radius*radius;
-            float rr = b*b - c;
+            float c = dot(oc, oc) - radius * radius;
+            float rr = b * b - c;
 
             if (rr > 0.0) {
                 result.t = -b - sqrt(rr);
@@ -87,52 +86,117 @@
                 if (result.t < 0.0)
                     result.t = -b + sqrt(rr);
 
-                result.position = ray.origin + result.t*ray.direction;
+                result.position = ray.origin + result.t * ray.direction;
                 result.normal = normalize(result.position - center);
                 return result;
             }
             return result;
         }
 
-        float calculateDepth(vec3 pos)
-        {
-            float far = gl_DepthRange.far; 
+        float calculateDepth(vec3 pos) {
+            float far = gl_DepthRange.far;
             float near = gl_DepthRange.near;
             vec4 clip_space_pos = modelViewProjection * vec4(pos, 1.0);
             float ndc_depth = clip_space_pos.z / clip_space_pos.w;
             return (((far - near) * ndc_depth) + near + far) / 2.0;
-        }        
+        }
 
-        void main() {
-            vec4 near = inverseModelViewProjection*vec4(v_position.xy,-1.0,1.0);
+        vec3 calculateReflectionDirection(vec3 incident, vec3 normal) {
+            return incident - 2.0 * dot(incident, normal) * normal;
+        }
+
+        vec3 calculateRefractionDirection(vec3 incident, vec3 normal, float refractiveIndex1, float refractiveIndex2)
+        {
+            float eta = refractiveIndex1 / refractiveIndex2;
+            float cosI = -dot(normal, incident);
+            float sinT2 = eta * eta * (1.0 - cosI * cosI);
+
+            if (sinT2 > 1.0) {
+                // Total internal reflection
+                return reflect(incident, normal);
+            } else {
+                float cosT = sqrt(1.0 - sinT2);
+                return eta * incident + (eta * cosI - cosT) * normal;
+            }
+        }
+
+        bool isInShadow(vec3 point, vec3 lightDirection) {
+            Ray shadowRay = Ray(point + lightDirection * 0.001, lightDirection);
+            Intersection shadowIntersection = intersectSphere(shadowRay, vec3(0.0), 1.0);
+            return shadowIntersection.t > 0.0;
+        }
+
+
+
+        vec3 traceRay(Ray initialRay, int maxDepth) {
+            vec3 accumulatedColor = vec3(0.0);
+            Ray currentRay = initialRay;
+
+            for (int i = 0; i < maxDepth; i++) {
+                Intersection intersection = intersectSphere(currentRay, vec3(0.0), 1.0);
+
+                if (intersection.t > 0.0) {
+                    // Diffuse Color
+                    vec3 color = vec3(clamp(dot(intersection.normal, vec3(0.0, 0.0, 1.0)), 0.0, 1.0), 0.0, 0.0);
+
+                    // Shadow
+                    vec3 lightDirection = normalize(vec3(1.0, 1.0, 1.0));
+                    if (!isInShadow(intersection.position, lightDirection)) {
+                        // Not in shadow, apply lighting
+                        accumulatedColor += color * max(dot(intersection.normal, lightDirection), 0.0);
+                    }
+
+                    // Reflection
+                    vec3 reflectionDirection = calculateReflectionDirection(currentRay.direction, intersection.normal);
+                    currentRay = Ray(intersection.position + reflectionDirection * 0.001, reflectionDirection);
+                    accumulatedColor += color * 0.8;
+
+                    // Refraction
+                    vec3 refractionDirection = calculateRefractionDirection(currentRay.direction, intersection.normal, 1.0, 1.5); // Example refractive indices (air to glass)
+                    currentRay = Ray(intersection.position + refractionDirection * 0.001, refractionDirection);
+                    accumulatedColor += color * 0.2;
+                } else {
+                    break; // No intersection, exit the loop
+                }
+            }
+
+            return accumulatedColor;
+        }
+
+    void main() {
+            vec4 near = inverseModelViewProjection * vec4(v_position.xy, -1.0, 1.0);
             near /= near.w;
-        
-            vec4 far = inverseModelViewProjection*vec4(v_position.xy,1.0,1.0);
+
+            vec4 far = inverseModelViewProjection * vec4(v_position.xy, 1.0, 1.0);
             far /= far.w;
-        
+
             // this is the setup for our viewing ray
             vec3 rayOrigin = near.xyz;
-            vec3 rayDirection = normalize((far-near).xyz);
+            vec3 rayDirection = normalize((far - near).xyz);
 
-            Ray r = Ray(rayOrigin,rayDirection);
+            Ray r = Ray(rayOrigin, rayDirection);
 
-            Intersection i = intersectSphere(r,vec3(0.0,0.0,0.0),1.0);
+            Intersection i = intersectSphere(r, vec3(0.0, 0.0, 0.0), 1.0);
 
             if (i.t > 0.0) {
-                float diffuse = clamp(dot(i.normal,vec3(0.0,0.0,1.0)),0.0,1.0);
-                outColor = vec4(diffuse,0.0,0.0,1.0);
+                float diffuse = clamp(dot(i.normal, vec3(0.0, 0.0, 1.0)), 0.0, 1.0);
+                outColor = vec4(diffuse, 0.0, 0.0, 1.0);
 
-                // using calcDepth, you can convert a ray position to an OpenGL z-value, so that intersections/occlusions with the
-                // model geometry are handled correctly, e.g.: gl_FragDepth = calcDepth(nearestHit);
-                // in case there is no intersection, you should get gl_FragDepth to 1.0, i.e., the output of the shader will be ignored
+            // Reflection and Refraction
+            vec3 totalColor = traceRay(r, 2);
+            outColor.rgb += totalColor;
+
+                // using calcDepth, you can convert a ray position to an OpenGL z-value
                 gl_FragDepth = calculateDepth(i.position);
                 return;
             }
 
-            // we output the ray direction for now, but if nothing was hit, we should set gl_FragDepth to 1.0
-            outColor = vec4(rayDirection.xyz,1.0);
+            // No intersection, output the ray direction for now
+            outColor = vec4(rayDirection.xyz, 1.0);
             //gl_FragDepth = 1.0;
+
         }
+
     </script>
 
     <!-- our main code -->
